tests/pass/DivisionAssign.java
package pass;

public class DivisionAssign {
    public boolean divideAndAssign(int x , int y) {
        x /= y;
        return x == x/y;
    } 
}
