tests/fail/DivisionAssign.java
package fail;

public class DivisionAssign {
    public static void main(String[] args) {
        char test_var = 'a';
        System.out.println(test_var /= 42);
    }
}